--- a/app/src/main/res/layout/splash_lay.xml
+++ b/app/src/main/res/layout/splash_lay.xml
@@ -32,15 +32,15 @@
 
     <ImageView
             android:id="@+id/rootlay"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_width="200dp"
+            android:layout_height="300dp"
             android:layout_centerInParent="true"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher_ride_logic"/>
+            android:src="@drawable/newlogo"/>
 <!--        <ImageView-->
 <!--            android:id="@+id/rootlay"-->
 <!--            android:layout_width="match_parent"-->
