--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
-<resources
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
@@ -304,6 +303,29 @@
     <item name="cornerSize">50%</item>
 </style>
 
+    <style name="AppTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        <item name="boxBackgroundColor">#F5F9FE</item>
+        <item name="boxStrokeColor">#1A237E</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="hintTextColor">#757575</item>
+    </style>
+
+    <style name="AppTextInputEditText" parent="Widget.MaterialComponents.TextInputEditText.OutlinedBox">
+        <item name="android:textColor">#212121</item>
+        <item name="android:textColorHint">#757575</item>
+    </style>
+
+    <style name="OnePayTaxiTheme" parent="Theme.MaterialComponents.Light.NoActionBar" tools:ignore="DuplicateDefinition">
+
+        <!-- 🔑 REQUIRED so text does NOT turn white on focus -->
+        <item name="colorOnSurface">#212121</item>
+        <item name="colorOnBackground">#212121</item>
+        <item name="android:textColorPrimary">#212121</item>
+        <item name="android:textColorSecondary">#757575</item>
+
+        <!-- your existing theme items -->
+        <item name="colorPrimary">@color/app_theme_main</item>
+    </style>
 
 
 
